# django-route-planner

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  fuel-prices-for-be-assessment.csv  main.py  pyproject.toml  requirements.txt
docker/: entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
postman/: spotter-route-planner.postman_collection.json
src/config/: settings.py  urls.py
src/route_planner/: admin.py  exceptions.py  models.py  schemas.py  urls.py  views.py
src/route_planner/management/commands/: geocode_fuel_stations.py  import_fuel_prices.py
src/route_planner/migrations/: 0001_initial.py  0002_alter_fuelstation_options.py
src/route_planner/services/: geo.py  geocoding.py  optimization.py  osrm.py  planner.py  station_selection.py  types.py
src/route_planner/templates/route_planner/: route_map.html
tests/: conftest.py  test_api.py  test_import_command.py  test_optimization.py
