[project]
name = "spotter-ai-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<6.1",
    "httpx>=0.27",
    "ortools>=9.10",
    "polars>=1.31",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.8",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "ty>=0.0.1a14",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/**/migrations/*.py" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
